<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Recherche">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Recherche_username"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/rechercheUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Recherche_email"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/rechercheEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Recherche_localite"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/rechercheLocalite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Recherche_date_de_naissance"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/rechercheDDN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/recherche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recherche" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>