<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:weightSum="4"
    android:background="@color/monRouge">

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:text="@string/nom_utilisateur"
        android:gravity="center_horizontal|center_vertical"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/email"
            tools:ignore="NestedWeights"
            android:background="@color/monJaune"/>

        <TextView
            android:id="@+id/ddn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/date_de_naissance"
            tools:ignore="NestedWeights"
            android:background="@color/monOrange"/>

        <TextView
            android:id="@+id/localite"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/localite"
            tools:ignore="NestedWeights"
            android:background="@color/monBleu"/>

    </LinearLayout>

</LinearLayout>